crates/vaab-types/tests/snapshots/errors__a_task_cannot_hand_back_a_function.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"to double(n: Int) returns Int = n * 2\\n\\\n         let job = start { double }\\n\")"
---
[unsendable-value] Error: a task cannot hand back the function value `to(Int) returns Int`
   ╭─[ example.vaab:2:11 ]
   │
 2 │ let job = start { double }
   │           ────────┬───────  
   │                   ╰───────── this task ends with the function value `to(Int) returns Int`, which travels back to whoever waits for it
   │ 
   │ Help: work the answer out first and pass that instead, or declare the work with `to` and call it by name, since a declared function is never carried across
   │ 
   │ Note: a function value holds on to whatever was around it when it was written, which Vaab has no way to look inside
───╯
