crates/vaab-types/tests/snapshots/errors__a_type_holding_a_function_cannot_be_carried_into_a_task.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"type Job {\\n\\\n         \\x20   work: to(Int) returns Int\\n\\\n         }\\n\\\n         to run(job: Job) {\\n\\\n         \\x20   let started = start { job.work(1) }\\n\\\n         }\\n\")"
---
[unsendable-capture] Error: a task cannot be given `job`
   ╭─[ example.vaab:5:27 ]
   │
 4 │ to run(job: Job) {
   │        ─┬─  
   │         ╰─── `job` is declared here
 5 │     let started = start { job.work(1) }
   │                           ─┬─  
   │                            ╰─── this task uses `job`, which is a `Job`
   │ 
   │ Help: pass the parts of it that are needed, rather than the whole value
   │ 
   │ Note: `Job`'s field `work` is `to(Int) returns Int`; a function value holds on to whatever was around it when it was written, which Vaab has no way to look inside
───╯
