crates/vaab-types/tests/snapshots/errors__a_type_that_cannot_json_is_rejected.snap
---
source: crates/vaab-types/tests/errors.rs
expression: rendered
---
[not-json] Error: a `Box` cannot be turned into JSON
   ╭─[ example.vaab:1:14 ]
   │
 1 │ type Box can Json { inbox: channel of Int }
   │              ──┬─  
   │                ╰─── this is Box
   │ 
   │ Help: only types that `can Json` may be passed to `to_json`
   │ 
   │ Note: a type `can Json` when every field, variant and item it holds can Json too
───╯
