crates/vaab-types/tests/snapshots/errors__a_type_used_where_a_value_belongs.snap
---
source: crates/vaab-types/tests/errors.rs
assertion_line: 107
expression: "errors(\"type Account {\\n\\\n         \\x20   owner: Text\\n\\\n         }\\n\\\n         let account = Account\\n\")"
---
[type-used-as-value] Error: `Account` is a type, not a value
   ╭─[ example.vaab:4:15 ]
   │
 4 │ let account = Account
   │               ───┬───  
   │                  ╰───── this names a type
   │ 
   │ Help: build one with `Account.new(...)`
───╯
